# face-detect

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: detectors.h  utils.h
src/: c.cpp  detectors.cpp  utils.cpp
videos/: g1.avi  g3.avi  g4.avi  gentlemen_3.avi  lc1.avi  lc3.avi  little_china_2.avi  little_china_4.avi  little_china_6.avi  little_china_7.avi  pc1.avi  pc2.avi  pc3.avi  pc4.avi  pc5.avi  pc6.avi
